# msp430g2231

./: CHANGELOG.md  Cargo.toml  README.md  device.x  msp430g2231.svd
src/: adc10.rs  calibration_data.rs  flash.rs  interrupt.rs  lib.rs  port_1_2.rs  special_function.rs  system_clock.rs  timer_a2.rs  usi.rs  watchdog_timer.rs
src/adc10/: adc10ae0.rs  adc10ctl0.rs  adc10ctl1.rs  adc10dtc0.rs  adc10dtc1.rs  adc10mem.rs  adc10sa.rs
src/calibration_data/: calbc1_1mhz.rs  caldco_1mhz.rs
src/flash/: fctl1.rs  fctl2.rs  fctl3.rs
src/port_1_2/: p1dir.rs  p1ie.rs  p1ies.rs  p1ifg.rs  p1in.rs  p1out.rs  p1ren.rs  p1sel.rs  p2dir.rs  p2ie.rs  p2ies.rs  p2ifg.rs  p2in.rs  p2out.rs  p2ren.rs  p2sel.rs
src/special_function/: ie1.rs  ifg1.rs
src/system_clock/: bcsctl1.rs  bcsctl2.rs  bcsctl3.rs  dcoctl.rs
src/timer_a2/: taccr0.rs  taccr1.rs  tacctl0.rs  tacctl1.rs  tactl.rs  taiv.rs  tar.rs
src/usi/: usickctl.rs  usicnt.rs  usictl0.rs  usictl1.rs  usisrh.rs  usisrl.rs
src/watchdog_timer/: wdtctl.rs
svd_patch/: msp430g2231.yaml
