[package]
authors = [
    "Thomas Kuenzel <thomas.kuenzel@gmx.de>"
]
description = "Peripheral access API for MSP430G2231 microcontroller"
documentation = "https://docs.rs/msp430g2231"
keywords = ["no-std", "msp430", "ti", "launchpad"]
license = "MIT OR Apache-2.0"
name = "msp430g2231"
repository = "https://github.com/tkuenzel/msp430g2231"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.0", optional = true }
msp430 = "0.4.0"
msp430-rt = { version = "0.4.0", optional = true }
vcell = "0.1.0"

[features]
rt = ["msp430-rt/device"]
